# BetPlatform

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  deploy.sh  docker-compose.yml  nginx.conf  package.json
.github/workflows/: release.yml
back/: Dockerfile  pyproject.toml  requirements.txt
back/app/: auth.py  config.py  database.py  main.py
back/app/models/: bet.py  match.py  user.py
back/app/routers/: bets.py  matches.py  users.py
back/app/schemas/: bet.py  match.py  user.py
back/src/: main.py
back/src/routers/: bets.py  users.py
front/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
front/src/: App.vue  main.ts
front/src/components/: BetComponent.vue  BetSlider.vue  MatchComponent.vue  MenuPanel.vue
front/src/router/: index.ts
front/src/services/: bets.service.js  date.utils.js  matchs.service.js  users.service.js
front/src/views/: BetsPage.vue  CreateUser.vue  HomePage.vue  LoginPage.vue  MatchsPage.vue  RankingPage.vue  RegisterPage.vue  SettingsPage.vue
matchs-provider/: Dockerfile  index.js  package.json
matchs-provider/jobs/: matchs-provider.js
matchs-provider/jobs/utils/: api.service.js  pg.service.js
src/views/: HomePage.vue
